resticprofile: exclude rest-server

--- a/roles/resticprofile/templates/profiles.yaml
+++ b/roles/resticprofile/templates/profiles.yaml
@@ -75,6 +75,9 @@ base:
       # Data
       - /mnt/storage/data/Downloads
 
+      # Media
+      - /mnt/storage/media/backup/rest-server
+
       # Docker
       # Docker containers
       - /mnt/appdata/docker/navidrome/cache
