--- a/roles/scanservjs/defaults/main.yml
+++ b/roles/scanservjs/defaults/main.yml
@@ -1,3 +1,3 @@
 ---
 service_name: "scanservjs"
-scanservjs_dir: "{{ docker_container_data_root }}/{{ service_name }}"
+scanservjs_dir: "{{ docker_container_data_root }}/paperless-ngx/app/consume"
