add watchtower to offsitenas

--- a/roles/watchtower/tasks/main.yml
+++ b/roles/watchtower/tasks/main.yml
@@ -9,3 +9,5 @@
       WATCHTOWER_NOTIFICATIONS: "shoutrrr"
       WATCHTOWER_NOTIFICATION_URL: "generic+https://ntfy.sh/{{ vault_ntfy_topic }}?title=WatchtowerOn{{ hostname|title }}"
     restart_policy: unless-stopped
+  vars:
+    ansible_python_interpreter: "{{ ansible_docker_venv_bin }}"
