--- a/roles/resticprofile/templates/profiles.yaml
+++ b/roles/resticprofile/templates/profiles.yaml
@@ -140,7 +140,7 @@ offsitenas:
     schedule: "01:00"
     schedule-permission: system
     schedule-lock-wait: 10m
-    schedule-log: /mnt/appdata/docker/resticprofile/logs/backup.log
+    schedule-log: /mnt/appdata/docker/resticprofile/logs/backup-offsite.log
 
   forget:
     keep-last: 10
@@ -152,7 +152,7 @@ offsitenas:
     schedule: "02:00"
     schedule-permission: system
     schedule-lock-wait: 1h
-    schedule-log: /mnt/appdata/docker/resticprofile/logs/forget.log
+    schedule-log: /mnt/appdata/docker/resticprofile/logs/forget-offsite.log
     send-after-fail:
       - body: "Restic forget failed"
         method: POST
@@ -163,11 +163,53 @@ offsitenas:
     schedule-permission: system
     read-data-subset: "2%"
     schedule-lock-wait: 1h
-    schedule-log: /mnt/appdata/docker/resticprofile/logs/check.log
+    schedule-log: /mnt/appdata/docker/resticprofile/logs/check-offsite.log
     send-after-fail:
       - body: "Restic check failed"
         method: POST
         url: "https://hc-ping.com/{{ vault_resticprofile_healthcheck_id2 }}/fail"
+
+# sudo ./bin/resticprofile jakob.backup
+jakob:
+  inherit: base
+  repository: "rest:http://rest-server-jakob.korat-chinstrap.ts.net:8000/simon"
+  password-file: "./password.txt"
+
+  backup:
+    run-after: "curl -fsS -m 10 --retry 5 https://hc-ping.com/{{ vault_resticprofile_healthcheck_id3 }}"
+    run-after-fail: "curl -fsS -m 10 --retry 5 https://hc-ping.com/{{ vault_resticprofile_healthcheck_id3 }}/fail"
+
+    # schedule: "03:00"
+    # schedule-permission: system
+    # schedule-lock-wait: 10m
+    # schedule-log: /mnt/appdata/docker/resticprofile/logs/backup-jakob.log
+
+  # forget:
+  #   keep-last: 10
+  #   keep-daily: 7
+  #   keep-weekly: 5
+  #   keep-monthly: 12
+  #   keep-yearly: 2
+  #   prune: true
+  #   schedule: "04:00"
+  #   schedule-permission: system
+  #   schedule-lock-wait: 1h
+  #   schedule-log: /mnt/appdata/docker/resticprofile/logs/forget-jakob.log
+  #   send-after-fail:
+  #     - body: "Restic forget failed"
+  #       method: POST
+  #       url: "https://hc-ping.com/{{ vault_resticprofile_healthcheck_id3 }}/fail"
+
+  # check:
+  #   schedule: "05:00"
+  #   schedule-permission: system
+  #   read-data-subset: "2%"
+  #   schedule-lock-wait: 1h
+  #   schedule-log: /mnt/appdata/docker/resticprofile/logs/check-jakob.log
+  #   send-after-fail:
+  #     - body: "Restic check failed"
+  #       method: POST
+  #       url: "https://hc-ping.com/{{ vault_resticprofile_healthcheck_id3 }}/fail"
 
 # sudo ./bin/resticprofile ext.backup
 ext:
