add service: hibiscus-actual

--- a/goldenford.yml
+++ b/goldenford.yml
@@ -133,6 +133,6 @@
     - role: deemix
       tags:
         - deemix
-    - role: hibiscus-server
+    - role: hibiscus-actual
       tags:
-        - hibiscus-server
+        - hibiscus-actual
